--- a/0x01-Webpack/task_1/public/index.html
+++ b/0x01-Webpack/task_1/public/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task 1 - Webpack Basic configuration</title>
+    <title>Webpack Example</title>
   </head>
   <body>
-    <script src="./bundle.js"></script>
+    <script src="bundle.js"></script>
   </body>
 </html>
